--- a/index.html
+++ b/index.html
@@ -12,18 +12,20 @@
 
 <body>
     <main class="container">
-        <div class="heading">
-            <img src="icon.png" alt="icon" srcset="">
-            <h1>Digital Clock</h1>
-        </div>
-        <div class="clock-box">
-            <div class="content">
-                <h1 id="show-hour">00</h1>
-                <span>:</span>
-                <h1 id="show-min">00</h1>
-                <span>:</span>
-                <h1 id="show-sec">00</h1>
-                <h4 id="show-ampm">AM</h4>
+        <div class="main-box">
+            <div class="heading">
+                <img src="icon.png" alt="icon" srcset="">
+                <h1>Digital Clock</h1>
+            </div>
+            <div class="clock-box">
+                <div class="content">
+                    <h1 id="show-hour">00</h1>
+                    <span>:</span>
+                    <h1 id="show-min">00</h1>
+                    <span>:</span>
+                    <h1 id="show-sec">00</h1>
+                    <h4 id="show-ampm">AM</h4>
+                </div>
             </div>
         </div>
     </main>
